
typedef unsigned long size_t;
typedef long intptr_t; typedef unsigned long uintptr_t;
typedef long scalar_t__;

typedef int bool;
 int close (int) ;
 int create_file (int *) ;
 int * g_file ;
 scalar_t__ g_length ;
 scalar_t__ g_offset ;
 int info (char*,...) ;
 int read_phys_memory (int ,scalar_t__,scalar_t__,int) ;

void handle_cmd_phys() {
 int fd = -1;
 info("[.] dumping physical memory [%016lx, %016lx):\n",
  g_offset, g_offset + g_length);
 if (g_file != ((void*)0))
  fd = create_file(g_file);
 read_phys_memory(0, g_offset, g_length, fd);
 if (fd != -1)
  close(fd);
 info("[+] done\n");
}
